--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,12 @@
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
   <dependencies>
+    <!--UEditor 驱动-->
+    <dependency>
+      <groupId>com.baidu.ueditor</groupId>
+      <artifactId>ueditor</artifactId>
+      <version>1.1.2</version>
+    </dependency>
     <!--Oracle12.1.0.2 驱动-->
     <dependency>
       <groupId>com.oracle</groupId>
