--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,9 +1,9 @@
 driverClassName=oracle.jdbc.driver.OracleDriver
 #validationQuery=SELECT 1
 #url=jdbc:mysql://localhost:3306/uracsdb?useUnicode=true&characterEncoding=UTF-8
-url=jdbc:oracle:thin:@47.93.78.81:1521:orcl
-username=C##test
-password=123456
+url=jdbc:oracle:thin:@10.0.0.3:1521:XE
+username=ilearns
+password=oracle
 hibernate.dialect=org.hibernate.dialect.OracleDialect
 hibernate.hbm2ddl.auto=false
 hibernate.show_sql=true
